--- a/lab1/doublebasepalindromes/CMakeLists.txt
+++ b/lab1/doublebasepalindromes/CMakeLists.txt
@@ -7,7 +7,10 @@ set(SOURCE_FILES DoubleBasePalindromes.cpp)
 add_library(libdoublebasepalindromes STATIC ${SOURCE_FILES})
 target_include_directories(libdoublebasepalindromes PUBLIC .)
 
+
 add_executable(doublebasepalindromes ${SOURCE_FILES} main.cpp)
 
 target_link_libraries(doublebasepalindromes libdoublebasepalindromes)
+target_link_libraries(libdoublebasepalindromes libreversestring)
+target_link_libraries(libdoublebasepalindromes libpalindrome)
 
