--- a/lab5/memorychunk/CMakeLists.txt
+++ b/lab5/memorychunk/CMakeLists.txt
@@ -4,7 +4,7 @@ project(memorychunk)
 set(HEDEAR_FILES MemoryChunk.h)
 set(SOURCE_FILES MemoryChunk.cpp)
 
-add_library(libmemorychunk STATIC ${SOURCE_FILES})
+add_library(libmemorychunk STATIC ${SOURCE_FILES} ../matrix/Matrix.cpp ../matrix/Matrix.h)
 target_include_directories(libmemorychunk PUBLIC .)
 
 add_executable(memorychunk ${SOURCE_FILES} main.cpp)
