--- a/lab6/academia/CMakeLists.txt
+++ b/lab6/academia/CMakeLists.txt
@@ -1,13 +1,13 @@
 
-project(studentrepository)
+project(student)
 
 set(HEDEAR_FILES StudentRepository.h)
 set(SOURCE_FILES StudentRepository.cpp)
 
-add_library(libstudentrepository STATIC ${SOURCE_FILES} main.cpp)
+add_library(libstudentrepository STATIC ${SOURCE_FILES})
 target_include_directories(libstudentrepository PUBLIC .)
 
-add_executable(studentrepository ${SOURCE_FILES} main.cpp)
+add_executable(student ${SOURCE_FILES} main.cpp)
 
-target_link_libraries(studentrepository libstudentrepository)
+target_link_libraries(student libstudentrepository)
 
