no niby dziala ten wordcounter, ale kolejne testy moga nie byc tak rozowe

--- a/lab6/academia/CMakeLists.txt
+++ b/lab6/academia/CMakeLists.txt
@@ -4,7 +4,7 @@ project(student)
 set(HEDEAR_FILES StudentRepository.h)
 set(SOURCE_FILES StudentRepository.cpp)
 
-add_library(libstudentrepository STATIC ${SOURCE_FILES})
+add_library(libstudentrepository STATIC ${SOURCE_FILES} ../wordcounter/WordCounter.cpp ../wordcounter/WordCounter.h ../wordcounter/main.cpp)
 target_include_directories(libstudentrepository PUBLIC .)
 
 add_executable(student ${SOURCE_FILES} main.cpp)
