--- a/lab6/academia/CMakeLists.txt
+++ b/lab6/academia/CMakeLists.txt
@@ -1,8 +1,8 @@
 
 project(studentrepository)
 
-set(HEDEAR_FILES StudentRepository.h)
-set(SOURCE_FILES StudentRepository.cpp)
+set(HEDEAR_FILES StudentRepository.h StudyYear.h)
+set(SOURCE_FILES StudentRepository.cpp StudyYear.cpp)
 
 add_library(libstudentrepository STATIC ${SOURCE_FILES})
 target_include_directories(libstudentrepository PUBLIC .)
