proba uruchomienia punkt3d

--- a/tests/lab7test/CMakeLists.txt
+++ b/tests/lab7test/CMakeLists.txt
@@ -27,3 +27,4 @@ target_link_libraries(lab7_all_tests libcomparable)
 target_link_libraries(lab7_all_tests libiterable)
 target_link_libraries(lab7_all_tests memleak)
 target_link_libraries(lab7_all_tests stringutility)
+target_link_libraries(lab7_all_tests libstudentrepositoryqueries)
