--- a/lab4/geometry/CMakeLists.txt
+++ b/lab4/geometry/CMakeLists.txt
@@ -1,8 +1,7 @@
-
 project(square)
 
-set(HEDEAR_FILES Square.h Point.h)
-set(SOURCE_FILES Square.cpp Point.cpp)
+set(HEDEAR_FILES Square.h Point.h ../../lab7/point3d/Point3D.h)
+set(SOURCE_FILES Square.cpp Point.cpp ../../lab7/point3d/Point3D.cpp)
 
 add_library(libsquare STATIC ${SOURCE_FILES})
 target_include_directories(libsquare PUBLIC .)
