--- a/lab7/CMakeLists.txt
+++ b/lab7/CMakeLists.txt
@@ -5,4 +5,5 @@ add_subdirectory_if_exists(comparable)
 add_subdirectory_if_exists(iterable)
 add_subdirectory_if_exists(academiaqueries)
 add_subdirectory_if_exists(point3d)
-
+add_subdirectory_if_exists(rounded)
+add_subdirectory_if_exists(shape)
