--- a/lab10/algotest/CMakeLists.txt
+++ b/lab10/algotest/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SOURCE_FILES Algo.cpp)
 add_library(libalgo STATIC ${SOURCE_FILES} main.cpp)
 target_include_directories(libalgo PUBLIC .)
 
-add_executable(algo ${SOURCE_FILES} main.cpp)
+add_executable(algo ${SOURCE_FILES} main.cpp ../academiascheduler/Scheduler.cpp ../academiascheduler/Scheduler.h ../academiascheduler/main.cpp)
 
 target_link_libraries(algo libalgo)
 
