--- a/tests/lab12test/CMakeLists.txt
+++ b/tests/lab12test/CMakeLists.txt
@@ -22,3 +22,5 @@ target_link_libraries(lab12_all_tests ${GTEST_LIBS})
 target_link_libraries(lab12_all_tests libtimerecorder)
 target_link_libraries(lab12_all_tests libteacherhash)
 target_link_libraries(lab12_all_tests libmemoryleak)
+target_link_libraries(lab12_all_tests libsequentialgenerator)
+target_link_libraries(lab12_all_tests libtree)
