sequentialgenerator - niby testy przechodzi, ale czy o to chodzi?

--- a/lab12/academiateacherhash/CMakeLists.txt
+++ b/lab12/academiateacherhash/CMakeLists.txt
@@ -4,7 +4,7 @@ project(teacherhash)
 set(HEDEAR_FILES TeacherHash.h)
 set(SOURCE_FILES TeacherHash.cpp)
 
-add_library(libteacherhash STATIC ${SOURCE_FILES} main.cpp)
+add_library(libteacherhash STATIC ${SOURCE_FILES} main.cpp ../academiasequentialgenerator/SequentialGenerator.cpp ../academiasequentialgenerator/SequentialGenerator.h)
 target_include_directories(libteacherhash PUBLIC .)
 
 add_executable(teacherhash ${SOURCE_FILES} main.cpp)
