--- a/lab12/academiasequentialgenerator/CMakeLists.txt
+++ b/lab12/academiasequentialgenerator/CMakeLists.txt
@@ -4,7 +4,7 @@ project(sequentialgenerator)
 set(HEDEAR_FILES SequentialGenerator.h)
 set(SOURCE_FILES SequentialGenerator.cpp)
 
-add_library(libsequentialgenerator STATIC ${SOURCE_FILES} main.cpp)
+add_library(libsequentialgenerator STATIC ${SOURCE_FILES} main.cpp ../treeiterators/TreeIterators.cpp ../treeiterators/TreeIterators.h ../treeiterators/main.cpp)
 target_include_directories(libsequentialgenerator PUBLIC .)
 
 add_executable(sequentialgenerator ${SOURCE_FILES} main.cpp)
