--- a/lab12/tree/CMakeLists.txt
+++ b/lab12/tree/CMakeLists.txt
@@ -4,7 +4,7 @@ project(tree)
 set(HEDEAR_FILES Tree.h)
 set(SOURCE_FILES Tree.cpp)
 
-add_library(libtree STATIC ${SOURCE_FILES} main.cpp ../timerecorder/TimeRecorder.cpp ../timerecorder/TimeRecorder.h ../timerecorder/main.cpp)
+add_library(libtree STATIC ${SOURCE_FILES})
 target_include_directories(libtree PUBLIC .)
 
 add_executable(tree ${SOURCE_FILES} main.cpp)
